fix: Fix theme css on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -414,7 +414,7 @@ input#themeswitch {
         max-width: 100%;
         height: 80%;
     }
-    label#light{
+    label#theme{
         margin: 0;
     }
     .card {
